[package]
name = "pwd-generator"
version = "0.1.0"
edition = "2021"
authors = ["Makariy <makariywallet@gmail.com>"]
description = "Tool for fast generating of passwords selected length"
readme = "README.md"
homepage = "https://github.com/ya-makariy/pwd-generator"
repository = "https://github.com/ya-makariy/pwd-generator"
license = "MIT"
keywords = ["password", "pwd"]

[profile.release]
strip = true

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
rand = "0.8.5"